syntax = "proto3";

package pb;

option go_package = "internal/data/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

import "dtos/current_traffic_data_detection_point.proto";
import "dtos/traffic_requests.proto";
import "dtos/traffic_statistics.proto";
import "dtos/traffic_responses.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service CurrentTrafficDataByDetectionPointService {
  rpc ListCurrentTrafficDataByDetectionPoints(ListTrafficDataByDetectionPointRequest) returns (ListCurrentTrafficDataByDetectionPointsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_point/list"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetCurrentTrafficDataByDetectionPoint(GetTrafficDataByDetectionPointRequest) returns (GetCurrentTrafficDataByDetectionPointsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_point/single"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc CreateCurrentTrafficDataByDetectionPoint(CreateCurrentTrafficDataByDetectionPointRequest) returns (CreateCurrentTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/current/detection_point",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc UpdateCurrentTrafficDataByDetectionPoint(UpdateCurrentTrafficDataByDetectionPointRequest) returns (UpdateCurrentTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      patch: "/api/v1/traffic/current/detection_point",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DeleteCurrentTrafficDataByDetectionPoint(DeleteTrafficDataByDetectionPointRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/traffic/current/detection_point"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }


  rpc BulkCreateCurrentTrafficDataByDetectionPoint(BulkCreateTrafficDataByDetectionPointRequest) returns (BulkCreateTrafficDataByDetectionPointResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/current/detection_point/bulk",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetCurrentTrafficDataByDetectionPointStatistics(GetTrafficDataByDetectionPointStatisticsRequest) returns (GetCurrentTrafficDataByDetectionPointStatisticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_point/statistics"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc ListCurrentTrafficDataByDetectionPointDaily(ListTrafficDataByDetectionPointDailyRequest) returns (ListCurrentTrafficDataByDetectionPointDailyResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_point/daily"     
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DownloadCurrentTrafficDataByDetectionPoint(DownloadTrafficDataByDetectionPointRequest) returns (DownloadResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_point/download"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

}


message ListCurrentTrafficDataByDetectionPointsResponse {
  repeated CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_points = 1;
  uint32 total_count = 2;
}


message GetCurrentTrafficDataByDetectionPointsResponse {
  repeated CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_point = 1;
  uint32 total_count = 2;
}

message CreateCurrentTrafficDataByDetectionPointRequest {
  CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_point = 1;
}

message CreateCurrentTrafficDataByDetectionPointResponse {
  CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_point = 1;
}

message UpdateCurrentTrafficDataByDetectionPointRequest {
  CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_point = 1;
}

message UpdateCurrentTrafficDataByDetectionPointResponse {
  CurrentTrafficDataByDetectionPoint current_traffic_data_by_detection_point = 1;
}

message GetCurrentTrafficDataByDetectionPointStatisticsResponse {
  string data_source_name = 1;
  uint32 records_count = 2;
  google.protobuf.Timestamp first_record_timestamp = 3;
  google.protobuf.Timestamp last_record_timestamp = 4;
  repeated CurrentTrafficDataByDetectionPointStatistics statistics_by_detection_point = 5;
}

message ListCurrentTrafficDataByDetectionPointDailyResponse {
  repeated CurrentTrafficDataByDetectionPoint daily_stats = 1;
}
